--- a/app/globals.css
+++ b/app/globals.css
@@ -5,22 +5,62 @@
   --foreground: #171717;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-gold-999: #ffa300; /* 실험용 변수 */
+
+  /* colors */
+  --color-point: #6d6afe;
+  --color-black: #111111;
+
+  --color-gray-100: #1e1e1e;
+  --color-gray-200: #2c2c2c;
+  --color-gray-300: #383838;
+  --color-gray-400: #444444;
+  --color-gray-500: #757575;
+  --color-gray-600: #b3b3b3;
+  --color-gray-700: #d9d9d9;
+  --color-gray-800: #e6e6e6;
+  --color-gray-900: #f5f5f5;
+
+  --spacing: 1px;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #111111;
+  }
+}
+
+@layer utilities {
+  .font-regular {
+    font-family: "Pretendard", sans-serif;
+    font-weight: 400;
+  }
+
+  .font-medium {
+    font-family: "Pretendard", sans-serif;
+    font-weight: 500;
+  }
+
+  .font-semibold {
+    font-family: "Pretendard", sans-serif;
+    font-weight: 600;
+  }
+
+  .font-bold {
+    font-family: "Pretendard", sans-serif;
+    font-weight: 700;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Pretendard, Helvetica, sans-serif;
 }
