--- a/app/globals.css
+++ b/app/globals.css
@@ -15,19 +15,16 @@
 
   /* colors */
   --color-point: #6d6afe;
-  --color-black: #111111;
+  --color-gradient: #6ae3f3;
+  --color-black: #111322;
   --color-system: #1fecc6;
   --color-error: #ff3235;
 
-  --color-gray-100: #1e1e1e;
-  --color-gray-200: #2c2c2c;
-  --color-gray-300: #383838;
-  --color-gray-400: #444444;
-  --color-gray-500: #757575;
-  --color-gray-600: #b3b3b3;
-  --color-gray-700: #d9d9d9;
-  --color-gray-800: #e6e6e6;
-  --color-gray-900: #f5f5f5;
+  --color-gray-100: #3e3e43;
+  --color-gray-200: #9fa6b2;
+  --color-gray-300: #ccd5e3;
+  --color-gray-400: #e7effb;
+  --color-gray-500: #f0f6ff;
 
   --spacing: 1px;
 }
