--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,7 @@
   --color-black: #111322;
   --color-system: #1fecc6;
   --color-error: #ff3235;
+  --color-example: #dddfff;
 
   --color-gray-100: #3e3e43;
   --color-gray-200: #9fa6b2;
