Add Modals, change font sizes.

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,8 @@
   --color-system: #1fecc6;
   --color-error: #ff3235;
   --color-example: #dddfff;
+  --color-kakao: #fee500;
+  --color-facebook: #1877f2;
 
   --color-gray-100: #3e3e43;
   --color-gray-200: #9fa6b2;
