Finish Footer Component, add several pages.

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
   --color-example: #dddfff;
   --color-kakao: #fee500;
   --color-facebook: #1877f2;
+  --color-footer: #111322;
 
   --color-gray-100: #3e3e43;
   --color-gray-200: #9fa6b2;
